# drive

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  tests.yml
docs/: setup-kafka-with-docker.md
scripts/: docker-clean-system.sh  docker-delete-containers.sh  docker-delete-images.sh  install-docker.sh  install-kafka.sh
scripts/windows/: docker-clean-system.ps1  docker-delete-containers.ps1  docker-delete-images.ps1
src/drive/: __init__.py  __main__.py  agent.py
src/drive/agent/: __init__.py  agent.py
src/drive/client/: __init__.py  azure_openai.py  client.py  openai.py
src/drive/commands/: __init__.py  agent.py  kafka.py
src/drive/datautil/: __init__.py  path_utils.py
src/drive/templates/: README.md
src/drive/templates/master/: Dockerfile  start.py
src/drive/templates/master/src/: __init__.py  master.py
templates/: README.md
templates/agent/: Dockerfile  requirements.txt  start.py
templates/agent/src/: agent.py  tools.py
tests/: test_dummy.py
