[tool.poetry]
name = "drive-llm"
version = "0.1.0"
description = ""
authors = [
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]

license = "LICENSE"
readme = "README.md"

packages = [ { include = "src/drive" } ]
homepage = "https://github.com/firelink-data/drive"
repository = "https://github.com/firelink-data/drive"

[tool.poetry.urls]
"Homepage" = "https://github.com/firelink-data/drive"
"Bug tracker" = "https://github.com/firelink-data/drive/issues"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.7"
confluent-kafka = "^2.3.0"
langchain = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.14"
pytest = "^8.0.0"
pyclean = "^2.7.6"


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
